Fix z-index for Navbar to show infront

--- a/src/assets/css/navbar.module.scss
+++ b/src/assets/css/navbar.module.scss
@@ -12,7 +12,7 @@
   border: 1px solid var(--jet);
   border-radius: 12px 12px 0 0;
   box-shadow: var(--shadow-2);
-  z-index: 1;
+  z-index: 5;
 
   .active {
     color: var(--orange-yellow-crayola);
